--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dimen_normal_size">16dp</dimen>
     <dimen name="dimen_medium_size">8dp</dimen>
+    <dimen name="margin_extra_large">50dp</dimen>
 </resources>
