--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -6,30 +6,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="1dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="@dimen/dimen_medium_size"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1" >
+        app:layout_constraintDimensionRatio="1">
 
-        <ImageView
-            tools:src="@tools:sample/backgrounds/scenic"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:id="@+id/imageView" />
+            android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/tvName"
-            android:padding="@dimen/dimen_medium_size"
-            android:textColor="@color/white"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:background="@color/colorBackgroundFolder"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
-            android:layout_alignParentBottom="true"
-            tools:text="@tools:sample/cities"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
+            <ImageView
+                tools:src="@tools:sample/backgrounds/scenic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:id="@+id/imageView" />
 
+            <TextView
+                android:id="@+id/tvName"
+                android:padding="@dimen/dimen_medium_size"
+                android:textColor="@color/white"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:background="@color/colorBackgroundFolder"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
+                android:layout_alignParentBottom="true"
+                tools:text="@tools:sample/cities"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
