--- a/app/src/main/res/layout/fragment_folder.xml
+++ b/app/src/main/res/layout/fragment_folder.xml
@@ -99,7 +99,7 @@
                 android:scrollbarThumbVertical="@android:color/darker_gray"
                 android:scrollbarSize="8dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/tvNoImages"
